--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
           <h1 class="visually-hidden title section-title">Projects list</h1>
           <ul class="filter-list">
             <li class="item">
-              <button type="button" class="filter-btn btn">All</button>
+              <button type="button" class="filter-btn btn current">All</button>
             </li>
             <li class="item">
               <button type="button" class="filter-btn btn">Web Site</button>
